--- a/lab02/mP/Makefile
+++ b/lab02/mP/Makefile
@@ -1,7 +1,7 @@
 all: data_acq
 
 data_acq:
-	gcc -o hall_daq feather_serial.c hall_sensor.c hall_daq.c
+	gcc -o hall_daq feather_serial.c hall_sensor.c hall_daq.c -lm
 
 clean:
 	rm hall_daq
